[package]
name = "word-chain-game"
version = "1.0.1"
authors = ["April <fynjyxbrjd@gmail.com>"]
edition = "2021"
description = "A word chain game helper"
readme = "README.md"
homepage = "https://github.com/quadratic-bit/words-game"
repository = "https://github.com/quadratic-bit/words-game"
license = "Unlicense"
keywords = ["game", "word-chain", "last-and-first", "words"]
categories = ["command-line-utilities", "games"]

[[bin]]
path = "src/main.rs"
name = "words"

[dependencies]
colored = "2.1.0"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
assert_fs = "1.1.0"

[profile.release]
opt-level = 3
debug = 0
strip = "symbols"
lto = "fat"
